--- a/index.html
+++ b/index.html
@@ -113,7 +113,38 @@
 <script src="public/js/mustache.min.js"></script>
 <script type="module" src="public/js/commen.js"></script>
 <script type="module" src="public/js/invoke.js"></script>
-<!-- carousel active -->
+<!-- carousel template -->
+<script type="text/template" id="slides_temp">
+    {{#slides}}
+    <div class="carousel-item">
+    <img src="{{.}}" class="d-block w-100">
+    </div>
+    {{/slides}}
+</script>
+<!-- specialization template -->
+<script type="text/template" id="specialization_temp">
+    <div class ="row">
+        {{#specialization}}
+         <div class ="col-lg-3">
+         <img src ="{{imgage}}" class="w-75" alt="specialization">
+         <h2>{{titile}}</h2>
+         </div>
+         {{/specialization}}
+         </div>
+</script>
+<script type="text/template" id="specialization_services">
+
+<div class="row">
+    {{#specialization_services}}
+     <div class ="col-lg-6">
+     <img src="{{image}}" class="w-100 mt-lg-5" alt="">
+     <h2>{{heading}}</h2>
+     <p>{{text}}</p>
+     <button>{{button}}</button>
+     </div>
+     {{/specialization_services}}
+     </div>
+    </script>
 
 </body>
 </html>
